# QQaibot

./: .env.example  .gitignore  QUICKSTART.md  README.md  USAGE.md  bot.py  group_whitelist.example.ini  group_whitelist.ini  llm_config.example.ini  llm_config.ini  openclaw_memory.py  pyproject.toml  requirements.txt
models/: README.md
plugins/echo/: __init__.py  chat_history.py  llm_ini.py  llm_reply.py  message_image.py  quoted_context.py  reply_error_echo_guard.py  tts.py  whitelist.py
scripts/: test_onebot_ws.py
tests/: test_reply_error_echo_guard.py
voice_ref/: README.md
人设/: agent.md  soul.md
